Added the get all functionality for testing. Will update this to only get recipes for the current user once user functionality is implemented.

--- a/RecipeBookAPI/appsettings.json
+++ b/RecipeBookAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Recipe_Book": "server=DESKTOP-0GM7OBC; database=Recipe_Book; Trusted_Connection=True; Encrypt=false;"
+  },
   "AllowedHosts": "*"
 }
